# ExploracionYCuracion

./: README.md  pyproject.toml
notebooks/: Trabajo Práctico 2 - Grupo2.ipynb  Trabajo practico 2 - Grupo1.ipynb  Trabajo practico 2 - Grupo2.ipynb  consignas.ipynb
