[tool.poetry]
name = "cupones"
version = "0.1.0"
description = "Data analytics for Cupones"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.0.14"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
nodejs = "^0.1.1"
scipy = "^1.6.2"
pyarrow = "^4.0.1"
fastparquet = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
